# Inquisitor

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  facts.txt.sample  meson.build  meson_options.txt  settings.json.sample  xmake.lua
api/: PluginInterface.cpp  PluginInterface.hpp  xmake.lua
api/include/inquisitor/: CoreDependencies.hpp  PluginInterface.hpp
api/src/: PluginInterface.cpp
inquisitor/: xmake.lua
inquisitor/src/: CoreDependencies.hpp  Inquisitor.cpp  Inquisitor.hpp  Log.hpp  main.cpp
plugins/: meson.build
plugins/BasePlugin/: BasePlugin.cpp  BasePlugin.hpp  Log.hpp  meson.build
plugins/CleanChannelPlugin/: CleanChannelPlugin.cpp  CleanChannelPlugin.hpp  Log.hpp  meson.build
plugins/GalleryPlugin/: GalleryPlugin.cpp  GalleryPlugin.hpp  Log.hpp  meson.build
plugins/GameOctoberPlugin/: GameOctoberPlugin.cpp  GameOctoberPlugin.hpp  Log.hpp  meson.build
plugins/HelloPlugin/: HelloPlugin.cpp  HelloPlugin.hpp  Log.hpp  meson.build
plugins/MelonPlugin/: Log.hpp  MelonPlugin.cpp  MelonPlugin.hpp  meson.build
plugins/QuoteMessagePlugin/: QuoteMessagePlugin.cpp  QuoteMessagePlugin.hpp  meson.build
plugins/RandomQuotePlugin/: Log.hpp  RandomQuotePlugin.cpp  RandomQuotePlugin.hpp  meson.build
plugins/ShaderPlugin/: Log.hpp  ShaderPlugin.cpp  ShaderPlugin.hpp  meson.build
src/: Bot.cpp  Bot.hpp  Fwd.hpp  Inquisitor.cpp  Inquisitor.hpp  Log.hpp  main.cpp
subprojects/: dpp.wrap  stormkit.wrap
